[project]
name = "ledger"
version = "0.1.0"
description = "Cryptographically attested, tamper-evident logs for multi-agent AI conversations"
authors = [{ name = "Krakalus" }]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/Krakalus/ledger"
homepage = "https://github.com/Krakalus/ledger"
keywords = ["cryptography", "ai-agents", "tamper-evident", "signed-logs", "ed25519"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "cryptography >=46.0",
    "jcs >=0.2",  # JSON Canonicalization Scheme (RFC 8785)
    "typer (>=0.23.0,<0.24.0)",
]

[project.optional-dependencies]
dev = [
    "pytest >=9.0",
    "pytest-cov >=5.0",
    "langchain-core >=1.2.7",
    "langgraph >=1.0.7",
    "langchain-openai >=1.1.7",
    "python-dotenv >=1.2.1",
    "openai >=2.16.0",
    "diskcache >=5.6.3",
    "pyautogen ==0.2.35",
]

[project.scripts]
attested-logs = "ledger.cli.main:app"  # â† this hooks your CLI command

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "typer (>=0.23.0,<0.24.0)"
]
